# DASpec

./: .gitignore  README.md  setup.cfg  setup.py
DASpec/: DASpec.py  carray.py  carray_wrap.cxx  common.h  component.cpp  curvefit.cpp  dasreadspec.py  function.cpp  makefile  swigDASpec.py  swigDASpec_wrap.cxx
demo/: demo.py  spec0627-52144-0143.fits
mpfit/cmpfit-1.3a/: Makefile
src_swig/: DASpec.h  DASpec.py  __init__.py  component.h  main.cpp  makefile  prototype.h  readDASout.py
