[metadata]
name=DASpec
version=0.0.1
author = Pu Du, adjusted by ZhiXiang Zhang
description = Tools for AGN spectral fitting
keywords = astronomy, astrophysics, AGN, spectral fitting
classifiers = 
    Environment :: Console
    Intended Audience :: Science/Research
    License :: MIT
    Programming Language :: Python :: 3
    Topic :: Scientific :: Astronomy

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    numpy
    scipy
    PyAstronomy
    matplotlib
    astropy
    specutils
    termcolor
    tqdm

[options.package_data]
* = *.so, *.txt